--- a/index.html
+++ b/index.html
@@ -1,39 +1,571 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portfolio</title>
+
+  <title>MyPortfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  body {
+      font: 400 15px Lato, sans-serif;
+      line-height: 1.8;
+      color: #818181;
+  }
+  h2 {
+      font-size: 24px;
+      text-transform: uppercase;
+      color: #303030;
+      font-weight: 600;
+      margin-bottom: 30px;
+  }
+  h4 {
+      font-size: 19px;
+      line-height: 1.375em;
+      color: #303030;
+      font-weight: 400;
+      margin-bottom: 30px;
+  }  
+  .jumbotron {
+      background-color: #1e90ff;
+      color: #fff;
+      padding: 100px 25px;
+      font-family: Montserrat, sans-serif;
+  }
+  .container-fluid {
+      padding: 60px 50px;
+  }
+  .bg-grey {
+      background-color: #f6f6f6;
+  }
+  .logo-small {
+      color: #1e90ff;
+      font-size: 50px;
+  }
+  .logo {
+      color: #1e90ff;
+      font-size: 200px;
+  }
+  .thumbnail {
+      padding: 0 0 15px 0;
+      border: none;
+      border-radius: 0;
+  }
+  .thumbnail img {
+      width: 100%;
+      height: 100%;
+      margin-bottom: 10px;
+  }
+  .carousel-control.right, .carousel-control.left {
+      background-image: none;
+      color: #1e90ff;
+  }
+  .carousel-indicators li {
+      border-color: #1e90ff;
+  }
+  .carousel-indicators li.active {
+      background-color: #1e90ff;
+  }
+  .item h4 {
+      font-size: 19px;
+      line-height: 1.375em;
+      font-weight: 400;
+      font-style: italic;
+      margin: 70px 0;
+  }
+  .item span {
+      font-style: normal;
+  }
+  .panel {
+      border: 1px solid #1e90ff; 
+      border-radius:0 !important;
+      transition: box-shadow 0.5s;
+  }
+  .panel:hover {
+      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+  }
+  .panel-footer .btn:hover {
+      border: 1px solid #1e90ff;
+      background-color: #fff !important;
+      color: #1e90ff;
+  }
+  .panel-heading {
+      color: #fff !important;
+      background-color: #1e90ff !important;
+      padding: 25px;
+      border-bottom: 1px solid transparent;
+      border-top-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 0px;
+      border-bottom-right-radius: 0px;
+  }
+  .panel-footer {
+      background-color: white !important;
+  }
+  .panel-footer h3 {
+      font-size: 30px;
+  }
+  .panel-footer h4 {
+      color: #aaa;
+      font-size: 14px;
+  }
+  .panel-footer .btn {
+      margin: 15px 0;
+      background-color: #1e90ff;
+      color: #fff;
+  }
+  .navbar {
+      margin-bottom: 0;
+      background-color: #1e90ff;
+      z-index: 9999;
+      border: 0;
+      font-size: 12px !important;
+      line-height: 1.42857143 !important;
+      letter-spacing: 4px;
+      border-radius: 0;
+      font-family: Montserrat, sans-serif;
+  }
+  .navbar li a, .navbar .navbar-brand {
+      color: #fff !important;
+  }
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+      color: #1e90ff !important;
+      background-color: #fff !important;
+  }
+  .navbar-default .navbar-toggle {
+      border-color: transparent;
+      color: #fff !important;
+  }
+  footer .glyphicon {
+      font-size: 20px;
+      margin-bottom: 20px;
+      color: #1e90ff;
+  }
+  .slideanim {visibility:hidden;}
+  .slide {
+      animation-name: slide;
+      -webkit-animation-name: slide;
+      animation-duration: 1s;
+      -webkit-animation-duration: 1s;
+      visibility: visible;
+  }
+  @keyframes slide {
+    0% {
+      opacity: 0;
+      transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      transform: translateY(0%);
+    }
+  }
+  @-webkit-keyframes slide {
+    0% {
+      opacity: 0;
+      -webkit-transform: translateY(70%);
+    } 
+    100% {
+      opacity: 1;
+      -webkit-transform: translateY(0%);
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .col-sm-4 {
+      text-align: center;
+      margin: 25px 0;
+    }
+    .btn-lg {
+        width: 100%;
+        margin-bottom: 35px;
+    }
+  }
+  @media screen and (max-width: 480px) {
+    .logo {
+        font-size: 150px;
+    }
+  }
+  </style>
 </head>
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#myPage">Web Portfolio</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#experience">EXPERIENCE</a></li>
+        <li><a href="#projects">PROJECTS</a></li>
+        <li><a href="#education">EDUCATION</a></li>
+        <li><a href="#personal">PERSONAL DATA</a></li>
+        <li><a href="#contact">CONTACT</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <div class="jumbotron text-center">
-  <h1>Art Anthony Pascual</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+  <img src="profile.jpg" class="img-rounded" alt="Cinque Terre" width="250" height="250">
+  <h1>I am Art Anthony Pascual</h1> 
+  <p>A Bachelor of Science in Computer Science graduate.</p>
 </div>
-  
-<div class="container">
+
+<div id="experience" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-8">
+      <h2>Work Experience</h2><br>
+	  <div class="container">       
+		<table class="table table-hover">
+			<thead>
+			 <tr>
+			 <th>Work</th>
+			 <th>Company</th>
+			 <th>Year</th>
+			 <th>Details</th>
+			 </tr>
+			</thead>
+			<tbody>
+			 <tr>
+			 <td>Jr. Computer Programmer/ Web Developer</td>
+			 <td>Asian Institute of Maritime Studies</td>
+			 <td>2011 – 2012</td>
+			 <td>Develop Quiz bee application, Pageant system for the school and Redesign the schools website.</td>
+			 </tr>
+			 <tr>
+			 <td>Sr. Programmer / Web Developer</td>
+			 <td>Asian Institute of Maritime Studies</td>
+			 <td>2012</td>
+			 <td>Ensure that Enrollment and Accounting System, Moodle server and web server  are up and running.</td>
+			 </tr>
+			 <tr>
+			 <td>Technical Programming Unit, Unit Head </td>
+			 <td>Asian Institute of Maritime Studies</td>
+			 <td>2012 – 2015</td>
+			 <td>Ensure all computer programs, blade servers , websites and databases are up and running according to process.</td>
+			 </tr>
+			 <tr>
+			 <td>Factory Worker</td>
+			 <td>SHO , Kakegawa , Japan</td>
+			 <td>2016 - Present</td>
+			 <td>Sorting finished products from Yazaki.</td>
+			 </tr>
+			</tbody>
+		</table>
+	 </div>
+	</div>
+  </div>
+</div>
+<div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <span class="glyphicon glyphicon-hdd logo slideanim"></span>
+    </div>
+    <div class="col-sm-8">
+	<h2>COMPUTER SKILLS</h2>
+	<table class="table">
+    <tbody>
+      <tr>
+        <td><h4>VB.Net</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 6</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 6</span></button>    
+		</td>
+        <td><h4>Php</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 7</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 5</span></button>    
+		</td>
+      </tr>
+      <tr>
+        <td><h4>C#</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 3</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 1</span></button>    
+		</td>
+        <td><h4>C++</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 3</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 1</span></button>    
+		</td>
+      </tr>
+      <tr>
+        <td><h4>CSS3/HTML5</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 7</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 5</span></button>    
+		</td>
+        <td><h4>Sql Server</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 7</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 6</span></button>    
+		</td>
+      </tr>
+	  <tr>
+        <td><h4>Access</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 7</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 2</span></button>    
+		</td>
+        <td><h4>Mysql</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 7</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 5</span></button>    
+		</td>
+      </tr>
+	  <tr>
+        <td><h4>Sybase</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 6</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 4</span></button>    
+	    </td>
+        <td><h4>JavaScript</h4>
+			<button type="button" class="btn btn-primary">Rating 1 - 10 <span class="badge"> 4</span></button>
+			<button type="button" class="btn btn-success">Year of Experience <span class="badge"> 4</span></button>    
+	    </td>
+      </tr>
+    </tbody>
+    </table><br>
+	 <h2>OTHERS </h2>
+		<ul>
+		  <li>Front-End Development Framework: Moodle, Joomla, Drupal, Foundation 5, Bootstrap</li>
+		  <li>Adobe Photoshop, Flash, After effect, Illustrator</li>
+		  <li>Microsoft Office 2003/2007/2010/2013</li>
+		  <li>Operating Systems: XP/Vista/7/8/10/Sever 2003/2008 R2</li>
+		  <li>Network troubleshooting/connection</li>
+		  <li>PC assembly/troubleshooting </li>
+		  <li>FTP Server</li>
+		</ul>
+    
+	</div>
+  </div>
+</div>
+
+<div id="projects" class="container-fluid text-center">
+  <h2>FINISHED PROJECTS</h2>
+  <br>
+  <div class="row slideanim">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-th-list logo-small"></span>
+      <h4>Quiz bee application</h4>
     </div>
     <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <span class="glyphicon glyphicon-stats logo-small"></span>
+      <h4>School faculty and subject evaluation system</h4>
     </div>
     <div class="col-sm-4">
-      <h3>Column 3</h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <span class="glyphicon glyphicon-user logo-small"></span>
+      <h4>Beauty pageant calculation system</h4>
+    </div>
+  </div>
+  <br><br>
+  <div class="row slideanim">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-equalizer logo-small"></span>
+      <h4>Electronic voting system</h4>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-blackboard logo-small"></span>
+      <h4>School websites</h4>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-folder-open logo-small"></span>
+      <h4 style="color:#303030;">Onscreen school examination system</h4>
+    </div>
+  </div>
+    <div class="row slideanim">
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-calendar logo-small"></span>
+      <h4>Payroll</h4>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-folder-close logo-small"></span>
+      <h4>Library system</h4>
+    </div>
+    <div class="col-sm-4">
+      <span class="glyphicon glyphicon-file logo-small"></span>
+      <h4 style="color:#303030;">Point of sale</h4>
+    </div>
+	<div class="col-sm-4">
+      <span class="glyphicon glyphicon-cog logo-small"></span>
+      <h4>Enrollment system</h4>
     </div>
   </div>
 </div>
+
+<div id="education" class="container-fluid text-center bg-grey">
+  <h2>EDUCATIONAL ATTAINMENT</h2><br>
+  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <h4>Tertiary<br><span>Asian Institute of Maritime Studies </span><br><span><b>Bachelor of Science in Computer Science</b></span><br><span>Pasay City, Philippines</span></h4>
+      </div>
+      <div class="item">
+        <h4>Secondary<br><span>San Antonio School </span><br><span>Aras-asan, Cagawait, Surigao del Sur, Philippines</span></h4>
+	  </div>
+      <div class="item">
+        <h4>Elementary<br><span>Aras-asan Elementary School </span><br><span>Aras-asan, Cagawait, Surigao del Sur, Philippines</span></h4>
+	  </div>
+    </div>
+
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+<div id="personal" class="container-fluid">
+  <div class="text-center">
+    <h2>PERSONAL DATA</h2>
+  </div>
+  <div class="row slideanim">
+    <div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Date of Birth</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>June 13, 1987</p>
+        </div>
+      </div>      
+    </div>     
+    <div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Place of Birth</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>Aras – asan, Cagwait Surigao del Sur, Philippines</p>
+        </div>
+      </div>      
+    </div>       
+    <div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Age</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>29</p>
+        </div>
+      </div>      
+    </div>
+	<div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Gender</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>Male</p>
+        </div>
+      </div>      
+    </div> 
+	<div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Civil Status</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>Married</p>
+        </div>
+      </div>      
+    </div> 
+	<div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Citizenship</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>Filipino</p>
+        </div>
+      </div>      
+    </div> 
+	<div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Religion</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>Catholic</p>
+        </div>
+      </div>      
+    </div> 
+	<div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Height</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>157 cm</p>
+        </div>
+      </div>      
+    </div>
+	<div class="col-sm-4 col-xs-12">
+      <div class="panel panel-default text-center">
+        <div class="panel-heading">
+          <h3>Visa Status</h3>
+        </div>
+        <div class="panel-body">
+          <p><strong>Spouse of permanent resident</p>
+        </div>
+      </div>      
+    </div> 
+  </div>
+</div>
+<center>
+<div id="contact" class="container-fluid bg-grey">
+  <h2>CONTACT INFORMATION</h2>
+      <p>Contact me and I'll get back to you as soon as possible.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>  437-1507 Shizuoka-Ken Kikugawa-Shi Akatsuchi 1358-5 Sun Village Ogasa E-203 , Japan</p>
+      <p><span class="glyphicon glyphicon-phone"></span>  090-1288-6638</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>  txacid@yahoo.com</p>
+</div></center>
+
+<footer class="container-fluid text-center">
+  <a href="#myPage" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"></span>
+  </a>
+  <p>Made by <a href="https://www.w3schools.com" title="Web Portfolio">Art Anthony Pascual</a></p>
+</footer>
+
+<script>
+$(document).ready(function(){
+  $(".navbar a, footer a[href='#myPage']").on('click', function(event) {
+    if (this.hash !== "") {
+      event.preventDefault();
+      var hash = this.hash;
+
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 900, function(){
+   
+        window.location.hash = hash;
+      });
+    }
+  });
+  
+  $(window).scroll(function() {
+    $(".slideanim").each(function(){
+      var pos = $(this).offset().top;
+
+      var winTop = $(window).scrollTop();
+        if (pos < winTop + 600) {
+          $(this).addClass("slide");
+        }
+    });
+  });
+})
+</script>
 
 </body>
 </html>
