--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 </nav>
 
 <div class="jumbotron text-center">
-  <img src="profile.jpg" class="img-rounded" alt="Cinque Terre" width="250" height="250">
+  <img src="https://github.com/acid15/artpascual/blob/master/profile.jpg" class="img-rounded" alt="Cinque Terre" width="250" height="250">
   <h1>I am Art Anthony Pascual</h1> 
   <p>A Bachelor of Science in Computer Science graduate.</p>
 </div>
