--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>Made by <a href="https://www.w3schools.com" title="Web Portfolio">Art Anthony Pascual</a></p>
+  <p>Made by <a href="https://acid15.github.io/artpascual" title="Web Portfolio">Art Anthony Pascual</a></p>
 </footer>
 
 <script>
